# quicklinks-taskbar-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: config.json  main.cpp  pch.h
